# saadaal-flood-forecaster

./: .env.example  .flake8  .gitignore  .mailmap  .secrets.baseline  CONTRIBUTING.md  DEMO.md  Dockerfile  LICENSE  PUBLICATIONS.md  README.md  amadeus_saadaal_flood_forecaster_cron  config.ini  docker-entrypoint.sh  forecast_weather.py  historical_weather.py  install.sh  pyproject.toml  requirements-test.txt  requirements.txt  setup.py  station.py  tox.ini
.github/: CODEOWNERS  pull_request_template.md
config/: config.ini
data/: district-data.csv  river_stations_metadata.csv  station-data.csv
data-extractor/: cdi-auto.py  fetch_indicator_23_years.py  fetch_indicator_last_month.py  latest_river.py  new_river.py  rainfall-auto.py  river-auto.py
docs/: SCRIPTS_REFERENCE.md  SENTRY_INTEGRATION.md  SERVER_QUICK_REFERENCE.md  container-deployment-guide.md  flood_forecaster_datamodel.md
example_outputs/: forecast_weather_daily_2024-11-13.csv
install/: install.sh
legacy/: alerting_module.py  forecast_weather.sh  test-alert.py  wrapper-script.sh
models/: Preprocessor_001-f7-RandomForestRegressor_001-Jowhar.joblib  Preprocessor_001-f7-XGBoost_001-Jowhar.joblib  Preprocessor_001_f15_Prophet_001_Belet Weyne.json  Preprocessor_001_f15_Prophet_001_Bulo Burti.json  Preprocessor_001_f1_Prophet_001_Bulo Burti.json  Preprocessor_001_f1_RandomForestRegressor_001_Bulo Burti.joblib  Preprocessor_001_f1_XGBoost_001_Bulo Burti.joblib  Preprocessor_001_f3_Prophet_001_Bulo Burti.json  Preprocessor_001_f3_RandomForestRegressor_001_Bulo Burti.joblib  (+3 more)
openmeteo/: README.md  (+7 more)
(+203 files in other folders)
