[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flood-forecaster"
version = "0.1.2"
description = "Flood forecasting libraries and CLI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "requests~=2.32.3",
    "SQLAlchemy~=2.0.36",
    "configparser~=7.1.0",
    "mailjet-rest~=1.3.4",
    "pandas~=2.3.0",
    "pandera[pandas]~=0.24.0",
    "requests-cache~=1.2.1",
    "psycopg2-binary~=2.9.10",
    "scikit-learn~=1.5.0",
    "matplotlib~=3.7.5",
    "seaborn~=0.13.2",
    "prophet==1.1.6",
    "xgboost~=3.0.2",
    "click~=8.1.7",
    "beautifulsoup4~=4.12.3",
    "python-dotenv~=0.19.2",
    "joblib>=1.2.0",
    "numpy>=1.26.0",
    "openmeteo_sdk~=1.20.1",
    "openmeteo_requests~=1.7.2",
    "retry_requests~=1.0.0",
    "lxml>=5.0.2",
    "urllib3~=1.26.20",
    "plotly",
    "tabulate",
    "pytest",
    "pytest-cov",
    "pytest-mock"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "pylint",
    "pylint-fail-under",
    "tox",
    "detect-secrets"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
flood-cli = "flood_forecaster_cli.main:cli"

[tool.flake8]
max-line-length = 140
max-doc-length = 155
max-complexity = 14
ignore = ["E203", "W503"]
